[tool.poetry]
name = "ai-utils"
version = "0.1.0"
description = "Common scripts and utilities for interacting with ai repositories"
authors = ["Scott Laue <laue.scott@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ai_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
tiktoken = "^0.4.0"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
